@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <th>Latest Stable Release</th>
-      <td><a href="v3.9.4.html">v3.9.4</a></td>
+      <td><a href="v3.9.5.html">v3.9.5</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
@@ -70,20 +70,16 @@
     manipulations of TIFF images, and documentation on the
     library and tools.  Libtiff is a portable software, it was built and
     tested on various systems: UNIX flavors (Linux, BSD, Solaris, MacOS X),
-    Windows, OpenVMS.  It should be possible to port libtiff and additional
-    tools on other OSes.
+    Windows, and OpenVMS.  It should be possible to port libtiff and additional
+    tools to other OSes.
   </p>
   <p>
     The library, along with associated tool programs, should handle most of
     your needs for reading and writing TIFF images on 32- and 64-bit
-    machines.  This software can also be used on older 16-bit systems
-    though it may require some effort and you may need to leave out some of
-    the compression support.
+    machines.
   </p>
   <p>
     The software was originally authored and maintained by Sam Leffler.
-    While he keeps a fatherly eye on the mailing list, he is no longer
-    responsible for day to day maintenance.
   </p>
   <p>
     Questions should be sent to the TIFF mailing list:
@@ -95,8 +91,9 @@
     The persons responsible for putting up this site and putting together
     versions &gt;= 3.5.1 are
     <a href="http://pobox.com/~warmerdam">Frank Warmerdam</a>,
-    <a href="mailto:dron@ak4719.spb.edu">Andrey Kiselev</a>, Bob Friesenhahn, 
-Joris Van Damme and Lee Howard.
+    <a href="mailto:dron@ak4719.spb.edu">Andrey Kiselev</a>,
+    <a href="mailto:bfriesen@simple.dallas.tx.us">Bob Friesenhahn</a>, 
+    Joris Van Damme, Lee Howard, and Olivier Paquet.
   </p>
   <p>
     The following sections are included in this documentation:
@@ -117,7 +114,7 @@ Joris Van Damme and Lee Howard.
   </ul>
   <hr>
   <p>
-    Last updated  $Date: 2010-06-15 19:07:05 $.
+    Last updated  $Date: 2011-04-09 20:09:53 $.
   </p>
 </body>
 </html>
